feat: require publish API keys
